tests/macros/confirm/validate.stderr
error: option `validate` does not exist for kind `confirm`
 --> $DIR/validate.rs:2:47
  |
2 |     let q = inquisition::questions![Confirm { validate: todo!() }];
  |                                               ^^^^^^^^
