tests/macros/confirm/validate.rs
fn main() {
    let q = inquisition::questions![Confirm { validate: todo!() }];
}
